# Learning-Cpp-Mini-project

./: CMakeLists.txt  List.txt  README.md  banque.cpp  banque_sauv.cpp  calculator.cpp  convertissor.cpp  guess_nbr.cpp  hello_world.cpp  to_do_list.cpp  utils.hpp
EvoluNoob/heritage/: main.cpp  makefile  unit.cpp  unit.hpp
ISEN/: ex1.cpp  tp0.cpp  tp1.cpp  tp2.cpp  tp3.cpp
ISEN/Animal/: main.cpp  makefile
ISEN/Animal_v1/: Animal.cpp  Animal.h  main.cpp
ISEN/Animal_v2/: Animal.cpp  Animal.h  Gazelle.cpp  Gazelle.h  Lion.cpp  Lion.h  main.cpp  makefile
ISEN/Point/: Geometry.cpp  Geometry.h  Point.cpp  Point.h  main.cpp  makefile
ISEN/TP_Monde/: Animal.h  Monde.h  main.cpp  makefile
